--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title> BlockChain. </title>
-</head>
-<body>'
-  <h1> Everything Explained. </h1>
-  <p> Current applications of blockChain. Click here to learn more.
-  Future applications of blockchain. Click here to learn more. </p>
+
+<body>
+  <h1> BlockChain.Everything Explained. </h1>
+  <p> Current applications of Blockchain. Click here to learn more.
+  Future applications of Blockchain. Click here to learn more. </p>
 </body>
 </html>
