--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<title>BlockChain</title>
 <body>
   <h1> BlockChain.Everything Explained. </h1>
   <p> Current applications of Blockchain. Click here to learn more.
