--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <body>
   <h1> BlockChain. Everything Explained. </h1>
   <p> Current applications of Blockchain. Click here to learn more.
-  Future applications of Blockchain. Click here to learn more. </p>
+    <button1>Click me</button1>
+  Future applications of Blockchain. Click here to learn more.
+  <button2>Click me</button2>
+ </p>
 </body>
 </html>
