--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
   <p> Current applications of Blockchain. Click here to learn more.
     <button1>Click me</button1>
   Future applications of Blockchain. Click here to learn more.
+
   <button2>Click me</button2>
+  <form role="search">
+      <div class="search-control">
+          <input type="search" id="site-search" name="q"
+                 placeholder="Search the site..."
+                 aria-label="Search through site content">
+          <button>Search</button>
+      </div>
+  </form>
  </p>
 </body>
 </html>
