--- a/index.html
+++ b/index.html
@@ -2,18 +2,14 @@
 <html>
 <title>BlockChain</title>
 <body>
-  <h1> BlockChain. Everything Explained. </h1>
-  <p> Current applications of Blockchain. Click here to learn more.
-    <button1>Click me</button1>
-  Future applications of Blockchain. Click here to learn more.
-
-  <button2>Click me</button2>
   <form role="search">
-      <div class="search-control">
-          <input type="search" id="site-search" name="q"
-                 placeholder="Search the site..."
-                 aria-label="Search through site content">
-          <button>Search</button>
+    <div class="search-control">
+        <input type="search" id="site-search" name="q"
+               placeholder="Search the site..."
+               aria-label="Search through site content">
+        <button>Search</button>
+    </div>
+</form>
       </div>
   </form>
  </p>
