--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <title>BlockChain</title>
 <body>
+  <h1> Search Cryptocurrencies Here </h1>
   <form role="search">
     <div class="search-control">
         <input type="search" id="site-search" name="q"
@@ -10,8 +11,8 @@
         <button>Search</button>
     </div>
 </form>
-      </div>
-  </form>
- </p>
+<img src="https://cdn-images-1.medium.com/max/1600/1*CvjclMDwgh9AqED_h5UVCA.jpeg" width="1600" height="900">
+  </p>
 </body>
 </html>
+<link type = "text/css" rel ="stylesheet" href="stylesheet/style.css"
