--- a/Cryptocurrencies/index.html
+++ b/Cryptocurrencies/index.html
@@ -11,7 +11,8 @@
         <button>Search</button>
     </div>
 </form>
-<img src="https://cdn-images-1.medium.com/max/1600/1*CvjclMDwgh9AqED_h5UVCA.jpeg" width="1600" height="900">
+<body style ="background-image:url(https://cdn-images-1.medium.com/max/1600/1*CvjclMDwgh9AqED_h5UVCA.jpeg" style= "width:auto; height:auto">
+<meta name = "viewport" content="width=devicewidth, inital-scale = 1.0">
   </p>
 </body>
 </html>
