--- a/Government/index.html
+++ b/Government/index.html
@@ -34,7 +34,7 @@
 <p>How blockchain technology influence different government:</p>
 <button class="collapsible">Why do government use blockchain technology?</button>
 <div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <p>Blockchain technology allows information to be encrypted and safely transfered in transactions. This is particularly useful for Government because it allows them to transfer public data without being comprimised. It also helps government regulate and build infrastructure for a fair place in order for traders to transact. Here are several governments that have begun implementing or considering the use of blockchain in their governing system.</p>
 </div>
 
 <p>Leading Governments:</p>
