--- a/Government/index.html
+++ b/Government/index.html
@@ -161,5 +161,5 @@ for (i = 0; i < coll.length; i++) {
 </style>
 
 <div class="footer">
-  <p>Government and blockchain uses</p>
+  <p>Government and Blockchain Uses</p>
 </div>
