--- a/Home Page/index.html
+++ b/Home Page/index.html
@@ -1,21 +1,86 @@
-<!DOCTYPE html>
+<!<!DOCTYPE html>
 <html>
-<title>BlockChain</title>
-<body>
-  <h1> BlockChain. Everything Explained. </h1>
-  <p> Current applications of Blockchain. Click here to learn more.
-    <button1>Click me</button1>
-  Future applications of Blockchain. Click here to learn more.
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+    box-sizing: border-box;
+}
 
-  <button2>Click me</button2>
-  <form role="search">
-      <div class="search-control">
-          <input type="search" id="site-search" name="q"
-                 placeholder="Search the site..."
-                 aria-label="Search through site content">
-          <button>Search</button>
-      </div>
-  </form>
- </p>
+body {
+    margin: 0;
+    font-family: Arial;
+    font-size: 17px;
+}
+
+#myVideo {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+}
+
+.content {
+    position: fixed;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    color: #f1f1f1;
+    width: 100%;
+    padding: 20px;
+}
+
+#myBtn {
+    width: 200px;
+    font-size: 18px;
+    padding: 10px;
+    border: none;
+    background: #000;
+    color: #fff;
+    cursor: pointer;
+}
+
+#myBtn:hover {
+    background: #ddd;
+    color: black;
+}
+</style>
+</head>
+<body>
+
+<div style="position: fixed; z-index: -99; width: 100%; height: 100%">
+
+
+<div class="videoContainer">
+    <iframe class="videoContainer__video" width="1920" height="1080" src="https://www.youtube.com/embed/E4ps3M1uXhM?modestbranding=1&autoplay=1&controls=0&fs=0&loop=1&rel=0&showinfo=0&disablekb=1" frameborder="0"></iframe>
+</div>
+
+</video>
+
+<div class="content">
+  <h1>What is BlockChain Technology?</h1>
+  <p>
+“The practical consequence […is…] for the first time, a way for one Internet user to transfer a unique piece of digital property to another Internet user, such that the transfer is guaranteed to be safe and secure, everyone knows that the transfer has taken place, and nobody can challenge the legitimacy of the transfer. The consequences of this breakthrough are hard to overstate.”
+
+– Marc Andreessen</p>
+
+  <button id="myBtn" onclick="myFunction()">Learn more</button>
+</div>
+
+<script>
+var video = document.getElementById("myVideo");
+var btn = document.getElementById("myBtn");
+
+function myFunction() {
+  if (video.paused) {
+    video.play();
+    btn.innerHTML = "Pause";
+  } else {
+    video.pause();
+    btn.innerHTML = "Play";
+  }
+}
+</script>
+
 </body>
 </html>
